--- a/login/package.json
+++ b/login/package.json
@@ -14,6 +14,7 @@
     "@vue/composition-api": "^0.6.4",
     "axios": "^0.18.1",
     "core-js": "^3.6.5",
+    "npx": "^10.2.2",
     "quasar": "^1.0.0",
     "vue-i18n": "^8.0.0"
   },
