quasar + buefy works, not change primarycolor yet

--- a/quasar_store/package.json
+++ b/quasar_store/package.json
@@ -10,8 +10,11 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@mdi/font": "^5.8.55",
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
+    "buefy": "^0.9.4",
     "core-js": "^3.6.5",
     "quasar": "^1.0.0",
     "vue-i18n": "^8.0.0"
