--- a/quasar_store/package.json
+++ b/quasar_store/package.json
@@ -17,10 +17,14 @@
     "buefy": "^0.9.4",
     "core-js": "^3.6.5",
     "quasar": "^1.0.0",
-    "vue-i18n": "^8.0.0"
+    "video.js": "^7.10.2",
+    "vue-i18n": "^8.0.0",
+    "vue-video": "^0.1.7",
+    "vue-video-player": "^5.0.2"
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0",
+    "@quasar/quasar-app-extension-qmediaplayer": "^1.1.3",
     "babel-eslint": "^10.0.1",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
