--- a/quasar_store/package.json
+++ b/quasar_store/package.json
@@ -10,6 +10,7 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@algoz098/vue-player": "^0.4.3",
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@mdi/font": "^5.8.55",
     "@quasar/extras": "^1.0.0",
@@ -18,6 +19,7 @@
     "core-js": "^3.6.5",
     "quasar": "^1.0.0",
     "video.js": "^7.10.2",
+    "vue-core-video-player": "^0.2.0",
     "vue-i18n": "^8.0.0",
     "vue-video": "^0.1.7",
     "vue-video-player": "^5.0.2"
