--- a/quasar_store/package.json
+++ b/quasar_store/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@algoz098/vue-player": "^0.4.3",
+    "@capacitor/core": "^2.4.4",
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "@ionic/pwa-elements": "^3.0.1",
     "@mdi/font": "^5.8.55",
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
